--- a/Test02/Views/KinhDoanh/ThemSP.cshtml
+++ b/Test02/Views/KinhDoanh/ThemSP.cshtml
@@ -3,75 +3,66 @@
 @{
     ViewBag.Title = "Thêm mới";
     Layout = "~/Views/KinhDoanh/Layout/LayoutKD.cshtml";
+    ViewBag.sp = "active";
+    ViewBag.nd = "Thêm mới sản phẩm";
 }
-
-<h2>Create</h2>
-
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>SanPham</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.MaSP, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.MaSP, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MaSP, "", new { @class = "text-danger" })
+<div class="tile">
+    <h3 class="tile-title">Tạo mới sản phẩm</h3>
+    <div class="tile-body">
+        <div class="row element-button">
+            <div class="col-sm-2">
+                <a class="btn btn-add btn-sm" data-toggle="modal" data-target="#exampleModalCenter">
+                    <b>
+                        <i class="fas fa-folder-plus"></i> Tạo chức vụ mới
+                    </b>
+                </a>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.TenSP, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TenSP, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TenSP, "", new { @class = "text-danger" })
-            </div>
         </div>
+        <form class="row" action="~/KinhDoanh/ThemSP" method="post">
+            @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.DonViTinh, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DonViTinh, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DonViTinh, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Gia, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Gia, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Gia, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group col-md-4">
+                    @Html.LabelFor(model => model.TenSP, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.TenSP, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.TenSP, "", new { @class = "text-danger" })
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.HanSD, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input class="form-control text-box single-line" data-val="true" data-val-date="The field HanSH must be a date." id="HanSD" name="HanSD" type="Date" value="">
-                @Html.ValidationMessageFor(model => model.HanSD, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group col-md-4">
+                    @Html.LabelFor(model => model.DonViTinh, htmlAttributes: new { @class = "control-label " })
+                    <select class="form-control" id="DonViTinh" name="DonViTinh">
+                        <option value="Lốc">Lốc </option>
+                        <option value="Thùng">Thùng</option>
+                        <option value="Lon">Lon</option>
+                        <option value="Chai">Chai</option>
+                    </select>
+                    @Html.ValidationMessageFor(model => model.DonViTinh, "", new { @class = "text-danger" })
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.NgayXuat, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayXuat must be a date." id="NgayXuat" name="NgayXuat" type="Date" value="">
-                @Html.ValidationMessageFor(model => model.NgayXuat, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                <div class="form-group col-md-4">
+                    @Html.LabelFor(model => model.Gia, htmlAttributes: new { @class = "control-label" })
+                    @Html.EditorFor(model => model.Gia, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Gia, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group col-md-3">
+                    @Html.LabelFor(model => model.NgaySX, htmlAttributes: new { @class = "control-label " })
+                    <input class="form-control text-box single-line" data-val="true" data-val-date="The field NgayXuat must be a date." id="NgaySX" name="NgaySX" type="datetime-local" value="">
+                    @Html.ValidationMessageFor(model => model.NgaySX, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group col-md-3">
+                    @Html.LabelFor(model => model.HanSD, htmlAttributes: new { @class = "control-label " })
+                    <input class="form-control text-box single-line" data-val="true" data-val-date="The field HanSH must be a date." id="HanSD" name="HanSD" type="datetime-local" value="">
+                    @Html.ValidationMessageFor(model => model.HanSD, "", new { @class = "text-danger" })
+                </div>
+                <div class="form-group col-md-12">
+                    <div class="col-md-offset-2 col-md-8">
+                        <input type="submit" value="Thêm mới sản phẩm" class="btn btn-save" />
+                        <a class="btn btn-cancel" href="~/KinhDoanh/QuanLySP">Hủy bỏ</a>
+                    </div>
+                </div>
+        </form>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
     </div>
-}
-
-<div>
-    @Html.ActionLink("Quay trở lại danh sách", "QuanLySP")
 </div>
