--- a/Test02/Views/KinhDoanh/XoaSP.cshtml
+++ b/Test02/Views/KinhDoanh/XoaSP.cshtml
@@ -3,14 +3,12 @@
 @{
     ViewBag.Title = "XoaSP";
     Layout = "~/Views/KinhDoanh/Layout/LayoutKD.cshtml";
+    ViewBag.sp = "active";
+    ViewBag.nd = "Xóa sản phẩm";
 }
 
-<h2>XoaSP</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h3>Bạn có chắc chắn muốn xóa sản phẩm này ?</h3>
 <div>
-    <h4>SanPham</h4>
-    <hr />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.TenSP)
@@ -35,7 +33,13 @@
         <dd>
             @Html.DisplayFor(model => model.Gia)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.NgaySX)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.NgaySX)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.HanSD)
         </dt>
@@ -44,13 +48,7 @@
             @Html.DisplayFor(model => model.HanSD)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.NgayXuat)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NgayXuat)
-        </dd>
+        
 
     </dl>
 
@@ -58,8 +56,8 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "QuanLySP")
+            <input type="submit" value="Xóa sản phẩm" class="btn btn-default" /> |
+            @Html.ActionLink("Quay lại danh sách sản phẩm", "QuanLySP")
         </div>
     }
 </div>
