--- a/Test02/Views/KinhDoanh/ChinhSuaDH.cshtml
+++ b/Test02/Views/KinhDoanh/ChinhSuaDH.cshtml
@@ -7,72 +7,73 @@
     ViewBag.nd = "Chỉnh sửa danh sách đơn hàng";
 }
 
-<h2>Chỉnh sửa đơn hàng @Model.MaDH</h2>
 
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+<div class="tile">
+    <h2>Chỉnh sửa đơn hàng @Model.MaDH của đại lý @Model.MaDL</h2>
+    <div class="tile-body">
 
-    <div class="form-horizontal">
-        <h4>DonHang</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.MaDH)
-        @Html.HiddenFor(model => model.MaDL)
-        @Html.HiddenFor(model => model.MaNVLap)
-        @Html.HiddenFor(model => model.NgayLap)
-        <div class="form-group">
-            @Html.LabelFor(model => model.MaDL, "MaDL", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("MaDL", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.MaDL, "", new { @class = "text-danger" })
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-horizontal">
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.MaDH)
+                @Html.HiddenFor(model => model.MaDL)
+                @Html.HiddenFor(model => model.MaNVLap)
+                @Html.HiddenFor(model => model.NgayLap)
+
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.TrangThai, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        <select class="form-control" id="TrangThai" name="TrangThai">
+                            <option>Chưa xét duyệt</option>
+                            <option>Đã xét duyệt</option>
+                            <option>Delayed</option>
+                        </select>
+                        @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.DiemGiao, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.DiemGiao, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.DiemGiao, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.TinhTrangThanhToan, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        <select class="form-control" id="TinhTrangThanhToan" name="TinhTrangThanhToan">
+                            <option>Chưa thanh toán</option>
+                            <option>Đã thanh toán</option>
+                            <option>Cọc trước</option>
+                        </select>
+                        @Html.ValidationMessageFor(model => model.TinhTrangThanhToan, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Save" class="btn btn-default" />
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Save" class="btn btn-default" />
+                    </div>
+                </div>
             </div>
-        </div>
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TrangThai, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <select class="form-control" id="TrangThai" name="TrangThai">
-                    <option>Chưa xét duyệt</option>
-                    <option>Đã xét duyệt</option>
-                    <option>Delayed</option>
-                </select>
-                @Html.ValidationMessageFor(model => model.TrangThai, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DiemGiao, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DiemGiao, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DiemGiao, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TinhTrangThanhToan, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <select class="form-control" id="TinhTrangThanhToan" name="TinhTrangThanhToan">
-                    <option>Chưa thanh toán</option>
-                    <option>Đã thanh toán</option>
-                    <option>Cọc trước</option>
-                </select>
-                @Html.ValidationMessageFor(model => model.TinhTrangThanhToan, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
+        }
     </div>
-}
-
+</div>
 <div>
     @Html.ActionLink("Quay lại danh sách", "QuanLyDH")
 </div>
