--- a/Test02/Views/KinhDoanh/QuanLyDH.cshtml
+++ b/Test02/Views/KinhDoanh/QuanLyDH.cshtml
@@ -25,8 +25,8 @@
                 </div>
                 <div id="sampleTable_wrapper" class="dataTables_wrapper container-fluid dt-bootstrap4 no-footer">
                     <div class="row">
-                       
-                        
+
+
                         <div class="col-md-1">
                             <div id="sampleTable_filter" class="dataTables_filter">
                                 <label>Tìm kiếm:<input type="search" class="form-control form-control-sm" placeholder="" aria-controls="sampleTable"></label>
@@ -55,65 +55,73 @@
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
-                                    <tr>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.MaDH)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.MaDL)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.MaNVLap)
-                                        </td>
-                                        @*<td>
-                                            @{var tensp = db.SanPhams.Find(item.MaSP);
-                                            }
-                                            @Html.DisplayFor(modelItem => tensp.TenSP)
-                                        </td>*@
-                                        @*<td>
-                                            @{var madh = db.ChiTietDonHangs.Find(item.MaDH);
-                                            }
-                                            @{ var ThanhTien = string.Format("{0:0,0 vnđ}", madh.ThanhTien);}
-                                            @Html.DisplayFor(modelItem => ThanhTien)
-                                        </td>*@
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.NgayLap)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.TrangThai)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.DiemGiao)
-                                        </td>
-                                        <td>
-                                            @{var madh = db.ChiTietDonHangs
-                                                        .Where(s => s.MaDH == item.MaDH)
-                                                        .FirstOrDefault();
-                                            }
-                                            @{ var ThanhTien = string.Format("{0:0,0 vnđ}", madh.ThanhTien);}
-                                            @Html.DisplayFor(modelItem => ThanhTien)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
-                                        </td>
-                                        <td>
-                                            <a href="/KinhDoanh/ChinhSuaDH/@item.MaDH" class="btn btn-primary btn-sm edit">
-                                                <i class="fa fa-edit"></i>
-                                            </a> 
-                                            <a href="/KinhDoanh/XoaDH/@item.MaDH" class="btn btn-primary btn-sm trash">
-                                                <i class="fas fa-trash-alt"></i>
-                                            </a>
-                                        </td>
-                                    </tr>
+                                        <tr>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MaDH)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MaDL)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.MaNVLap)
+                                            </td>
+                                            @*<td>
+                                                    @{var tensp = db.SanPhams.Find(item.MaSP);
+                                                    }
+                                                    @Html.DisplayFor(modelItem => tensp.TenSP)
+                                                </td>*@
+                                            @*<td>
+                                                    @{var madh = db.ChiTietDonHangs.Find(item.MaDH);
+                                                    }
+                                                    @{ var ThanhTien = string.Format("{0:0,0 vnđ}", madh.ThanhTien);}
+                                                    @Html.DisplayFor(modelItem => ThanhTien)
+                                                </td>*@
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.NgayLap)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.TrangThai)
+                                            </td>
+                                            <td>
+                                                @{var diemgiao = db.ChiTietDonHangs
+                                                                    .Where(s => s.MaDH == item.MaDH)
+                                                                    .FirstOrDefault();
+                                                }
+                                                    @Html.DisplayFor(modelItem => diemgiao.DiemGiao)
+                                                </td>
+                                            <td>
+                                                @{var madh = db.ChiTietDonHangs
+                                                              .Where(s => s.MaDH == item.MaDH)
+                                                              .FirstOrDefault();
+                                                }
+                                                @{ var ThanhTien = string.Format("{0:0,0 vnđ}", madh.ThanhTien);}
+                                                @Html.DisplayFor(modelItem => ThanhTien)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(modelItem => item.TinhTrangThanhToan)
+                                            </td>
+                                            <td>
+                                                <a href="/KinhDoanh/ChinhSuaDH/@item.MaDH" class="btn btn-primary btn-sm edit">
+                                                    <i class="fa fa-edit"></i>
+                                                </a>
+                                                <a href="/KinhDoanh/ChinhSuaCTDH/@item.MaDH" class="btn btn-outline-primary btn-sm edit">
+                                                    <i class="fas fa-edit"></i>
+                                                </a>
+                                                <a href="/KinhDoanh/XoaDH/@item.MaDH" class="btn btn-primary btn-sm trash">
+                                                    <i class="fas fa-trash-alt"></i>
+                                                </a>
+
+                                            </td>
+                                        </tr>
                                     }
                                 </tbody>
                             </table>
                         </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-    </div>
 
 
