--- a/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
+++ b/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
@@ -63,6 +63,12 @@
                 </a>
             </li>
             <li>
+                <a class="app-menu__item @ViewBag.qldonhangkt" href="~/KeToan/QlyDonHangKeToan">
+                    <i class='app-menu__icon bx bx-tachometer'></i>
+                    <span class="app-menu__label">Quản lý đơn hàng</span>
+                </a>
+            </li>
+            <li>
                 <a class="app-menu__item  @ViewBag.qlhd" href="~/KeToan/QLHoaDon">
                     <i class='app-menu__icon bx bx-id-card'></i> <span class="app-menu__label">Quản lý hóa đơn</span>
                 </a>
@@ -78,10 +84,10 @@
                 </a>
             </li>
             @*<li>
-                <a class="app-menu__item @ViewBag.ln" href="~/KeToan/LoiNhuan">
-                    <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Lợi Nhuận</span>
-                </a>
-            </li>*@
+            <a class="app-menu__item @ViewBag.ln" href="~/KeToan/LoiNhuan">
+                <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Lợi Nhuận</span>
+            </a>
+        </li>*@
 
         </ul>
     </aside>
